--- a/flaskr/templates/camera/index.html
+++ b/flaskr/templates/camera/index.html
@@ -21,7 +21,7 @@
 <button onclick="move('down')">down</button>
 
 <script>
-  function move(position) {
+  function move(position, tripod) {
     var xmlHttp = new XMLHttpRequest();
     xmlHttp.open( "GET", '/tripod/' + position, false ); // false for synchronous request
     xmlHttp.send( null );
