--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -5,11 +5,24 @@
 {% endblock %}
 
 {% block content %}
-  <form method="post">
-    <label for="username">Username</label>
-    <input name="username" id="username" required>
-    <label for="password">Password</label>
-    <input type="password" name="password" id="password" required>
-    <input type="submit" value="Log In">
+<div class="container">
+    <div class="text-center">
+        <h1>Log in to see Nalu =)</h1>
+    </div>
+  <form method="post"> 
+    <div class="form-row">
+        <div class="form-group col-md-6">
+            <input  class="form-control" name="username" id="username" placeholder="username" required>
+        </div>
+        <div class="form-group col-md-6">
+          <input  class="form-control" type="password" name="password" placeholder="username" id="password" required>
+        </div>
+    </div>
+    <div class="form-row">
+        <div class="form-group col-md-12">
+            <input class="form-control" type="submit" value="Log In">
+        </div>
+    </div>
   </form>
+</div>
 {% endblock %}
