adding emplate stuff

--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -6,9 +6,11 @@
 
 {% block content %}
 <div class="container">
-    <div class="text-center">
-        <h1>Log in to see Nalu =)</h1>
-    </div>
+    <section class="text-center">
+      <div class="container">
+        <img src="{{ url_for('static', filename='front_image.jpg') }}" class="img-fluid" alt="Responsive image">
+      </div>
+    </section>
   <form method="post"> 
     <div class="form-row">
         <div class="form-group col-md-6">
