--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -4,22 +4,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="shortcut icon" href="{{ url_for('static', filename='favicon.ico') }}" />
     <link rel="stylesheet" href="{{ url_for('static', filename='css/bootstrap.min.css') }}" >
+    <link rel='stylesheet' href='https://use.fontawesome.com/releases/v5.7.0/css/all.css' integrity='sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ' crossorigin='anonymous'>
     <title>Nalu Cam</title>
 </head>
 <body>
   <div class="container">
-    <!-- <nav class="navbar navbar-default">
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-        {% if g.user %}
-          <li><span>{{ g.user['username'] }}</span>
-          <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-        {% else %}
-          <li><a href="{{ url_for('auth.login') }}">Log In</a>
-        {% endif %}
-        </ul>
-      </div>
-    </nav> -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a class="navbar-brand" href="/">Nalu Cam</a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
@@ -27,18 +16,16 @@
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav mr-auto">
+            <ul class="navbar-nav ml-auto">
                 {% if g.user %}
-                  <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                  <span class="navbar-text mr-2">
+                      Welcome {{ g.user['username'] }}!
+                  </span>
+                  <li><a class="btn btn-warning ml-auto" href="{{ url_for('auth.logout') }}">Log Out</a></li>
                 {% else %}
-                  <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                  <li><a class="btn btn-success ml-auto" href="{{ url_for('auth.login') }}">Log In</a></li>
                 {% endif %}
             </ul>
-            {% if g.user %}
-            <span class="navbar-text">
-                Welcome {{ g.user['username'] }}!
-            </span>
-            {% endif %}
         </div>
     </nav>
     {% block content %}{% endblock %}
