--- a/flaskr/templates/camera/index.html
+++ b/flaskr/templates/camera/index.html
@@ -2,20 +2,35 @@
 
 {% block content %}
 <div class="container">
-    <div class="container">
-        <div class="text-center">
-            <img src="{{ url_for('api.get_stream', camera=camera) }}" class="rounded"/>
+    <section class="text-center">
+        <div class="container pt-3 pb-3">
+          <img src="{{ url_for('api.get_stream', camera=camera) }}" class="p-20 img-fluid" alt="Responsive image"/>
         </div>
-    </div>
-    
-    <div class="row">
-        <button onclick="move('left')">left</button>
-        <button onclick="move('right')">right</button>
-        <button onclick="move('up')">up</button>
-        <button onclick="move('down')">down</button>
-    </div>
+    </section> 
+    <div class="m-20 p-20 container text-center">
+        <div class="row">
+          <div class="mx-auto btn-group col-6">
+            <div class="col-4"></div>
+            <button class="btn btn-primary col-4" onclick="move('up')"><i class='fas fa-arrow-up' style='font-size:24px'></i></button>
+            <div class="col-4"></div>
+          </div>
+        </div>
+        <div class="row">
+          <div class="mx-auto btn-group col-6">
+            <button class="btn btn-primary col-4" onclick="move('left')"><i class='fas fa-arrow-left' style='font-size:24px'></i></button>
+            <div class="col-4"></div>
+            <button class="btn btn-primary col-4" onclick="move('right')"><i class='fas fa-arrow-right' style='font-size:24px'></i></button>
+          </div>
+        </div>
+        <div class="row">
+          <div class="mx-auto btn-group col-6">
+              <div class="col-4"></div>
+              <button class="btn btn-primary col-4" onclick="move('down')"><i class='fas fa-arrow-down' style='font-size:24px'></i></button>
+              <div class="col-4"></div>  
+          </div>
+        </div>
+    </div>  
 </div>
-
 
 <script>
   function move(position, tripod) {
