--- a/flaskr/templates/auth/login.html
+++ b/flaskr/templates/auth/login.html
@@ -17,7 +17,7 @@
             <input  class="form-control" name="username" id="username" placeholder="username" required>
         </div>
         <div class="form-group col-md-6">
-          <input  class="form-control" type="password" name="password" placeholder="username" id="password" required>
+          <input  class="form-control" type="password" name="password" placeholder="password" id="password" required>
         </div>
     </div>
     <div class="form-row">
